package edu.fiuba.algo3.Model.CosasDelincuente;

public interface Arma {

    public int atacar();

}
